--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "slug": "ValleyRackFree",
   "name": "Valley Rack Free",
-  "license": "GPL-3.0, BSD 3-clause",
+  "license": "GPL-3.0 and BSD-3-Clause",
   "version": "0.5.1",
   "manual": "https://github.com/ValleyAudio/ValleyRackFree/",
   "source": "https://github.com/ValleyAudio/ValleyRackFree/",
