--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "slug": "ValleyRackFree",
-  "name": "Valley Rack Free",
+  "name": "Valley",
   "license": "GPL-3.0 and BSD-3-Clause",
   "version": "0.5.3",
   "manual": "https://github.com/ValleyAudio/ValleyRackFree/",
