--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "slug": "ValleyRackFree",
   "name": "Valley",
+  "author": "ValleyAudio",
   "license": "GPL-3.0 and BSD-3-Clause",
   "version": "0.5.3",
   "manual": "https://github.com/ValleyAudio/ValleyRackFree/",
